--- a/prototypes/ui/assets/css-compiled/main.css
+++ b/prototypes/ui/assets/css-compiled/main.css
@@ -507,37 +507,36 @@ body {
   letter-spacing: 0px;
   font-weight: 400;
 }
-#topbar nav > ul > li {
-  display: inline-block;
-  text-transform: capitalize;
-}
-#topbar nav > ul > li:first-of-type {
+#topbar nav {
   cursor: pointer;
-  max-height: 0.75rem;
+  max-height: 1.25rem;
   text-align: right;
   overflow: hidden;
+  transition: max-height 0.25s ease;
 }
-#topbar nav > ul > li:first-of-type > * {
-  top: -0.25rem;
+#topbar nav > * {
   transform: translateY(0);
   transition: transform 0.25s ease;
 }
-#topbar nav > ul > li:first-of-type span {
-  display: inline-block;
-}
-#topbar nav > ul > li:first-of-type:hover > * {
+#topbar nav:hover > * {
   transform: translateY(-1.25rem);
 }
-#topbar nav > ul > li:first-of-type > ul > li {
-  display: inline-block;
-  padding-left: 12.5px;
+@media (max-width: 700px) {
+  #topbar nav {
+    position: absolute;
+    right: 0;
+  }
+  #topbar nav:hover {
+    max-height: 3.75rem;
+  }
 }
-#topbar nav > ul > li:last-of-type:before {
-  content: "";
-  border-left: 1px solid currentColor;
-  padding-right: 12.5px;
-  margin-left: 12.5px;
-  height: 1.25rem;
+#topbar nav span {
+  display: inline-block;
+}
+#topbar nav > ul > li {
+  display: inline-block;
+  text-transform: capitalize;
+  padding-left: 12.5px;
 }
 
 body > footer nav li {
@@ -708,7 +707,7 @@ body > footer .mentions {
   --cRRR: hsl(8, 92%, 30%);
   --cW: hsl(0, 0%, 100%);
   --cWW: hsl(0, 0%, 95%);
-  --cWWW: hsl(0, 0%, 85%);
+  --cWWW: hsl(0, 0%, 80%);
   --cK: hsl(0, 0%, 0%);
   --cKK: hsl(0, 0%, 15%);
   --cKKK: hsl(0, 0%, 30%);
@@ -1195,14 +1194,8 @@ body#info input#toggle-sideNav:checked + nav#sideNav {
   transform: translateX(0);
 }
 
-body#index #topbar nav > ul > li:first-of-type {
+body#index #topbar nav {
   visibility: hidden;
-}
-body#index #topbar nav > ul > li:last-of-type:before {
-  content: none;
-}
-body#index main {
-  height: calc(100vh - 6.25rem);
 }
 body#index main nav {
   height: 66vh;
@@ -1237,7 +1230,6 @@ body#index main nav ul li {
   line-height: 1.25rem;
   font-weight: 300;
   letter-spacing: 0px;
-  font-size: 1.25rem;
   font-weight: 400;
   line-height: 180% !important;
   display: inline-block;
@@ -1265,13 +1257,15 @@ body#index main nav ul li .videoWrapper {
   animation: pulse 4s steps(12) infinite;
   visibility: hidden;
 }
+body#index main nav ul li .videoWrapper video, body#index main nav ul li .videoWrapper iframe {
+  opacity: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  mix-blend-mode: luminosity;
+}
 body#index main nav ul li .videoWrapper video {
   left: 50%;
   transform: translateX(-50%);
-  min-width: 100vw;
-  min-height: 100vh;
-  opacity: 0;
-  mix-blend-mode: luminosity;
 }
 body#index main nav ul li a:hover:after {
   width: 66%;
@@ -1280,7 +1274,7 @@ body#index main nav ul li a:hover:after {
 body#index main nav ul li a:hover + .videoWrapper {
   visibility: visible;
 }
-body#index main nav ul li a:hover + .videoWrapper video {
+body#index main nav ul li a:hover + .videoWrapper video, body#index main nav ul li a:hover + .videoWrapper iframe {
   opacity: 1;
 }
 body#index main nav ul li:nth-of-type(1) .videoWrapper video {
@@ -1298,7 +1292,7 @@ body#index main nav ul li:nth-of-type(1) .videoWrapper video {
 body#index.fadeVideo1 main nav > ul > li:nth-of-type(1) .videoWrapper, body#index.fadeVideo2 main nav > ul > li:nth-of-type(2) .videoWrapper, body#index.fadeVideo3 main nav > ul > li:nth-of-type(3) .videoWrapper {
   visibility: visible;
 }
-body#index.fadeVideo1 main nav > ul > li:nth-of-type(1) .videoWrapper video, body#index.fadeVideo2 main nav > ul > li:nth-of-type(2) .videoWrapper video, body#index.fadeVideo3 main nav > ul > li:nth-of-type(3) .videoWrapper video {
+body#index.fadeVideo1 main nav > ul > li:nth-of-type(1) .videoWrapper video, body#index.fadeVideo1 main nav > ul > li:nth-of-type(1) .videoWrapper iframe, body#index.fadeVideo2 main nav > ul > li:nth-of-type(2) .videoWrapper video, body#index.fadeVideo2 main nav > ul > li:nth-of-type(2) .videoWrapper iframe, body#index.fadeVideo3 main nav > ul > li:nth-of-type(3) .videoWrapper video, body#index.fadeVideo3 main nav > ul > li:nth-of-type(3) .videoWrapper iframe {
   animation: fade 7s linear;
 }
 @keyframes fade {
