--- a/prototypes/ui/assets/scss/component/_topbar.scss
+++ b/prototypes/ui/assets/scss/component/_topbar.scss
@@ -12,44 +12,34 @@
 	*{ @include f1-s1(); font-weight: $bold; }
 
 	nav{
+		cursor: pointer;
+		max-height: $baseline;
+		text-align: right;
+		overflow: hidden;
+		transition: max-height .25s ease;
+
+		> *{ 
+			//top: -.25rem; 
+			transform: translateY(0); 
+			transition: transform .25s ease;
+		}
+		
+		&:hover {
+			> *{transform: translateY(-$baseline);}
+		}
+		@include for-size(phone){
+			position: absolute;
+			right: 0;
+			&:hover {max-height: $baseline*3;}
+		}
+		
+		span{display: inline-block;}
+		
 		> ul {
 			> li{
 				display: inline-block;
 				text-transform: capitalize;
-
-				&:first-of-type{
-					cursor: pointer;
-					max-height: $font-size*.75;
-					text-align: right;
-					overflow: hidden;
-
-					> *{ 
-						top: -.25rem; 
-						transform: translateY(0); 
-						transition: transform .25s ease;
-					}
-
-					span{display: inline-block;}
-
-					&:hover{
-						> *{transform: translateY(-$baseline);}
-					}
-
-					> ul {
-						> li{
-							display: inline-block;
-							padding-left: $unite/2;
-						}
-					}
-
-				}
-				&:last-of-type:before{
-					content: "";
-					border-left: 1px solid currentColor;
-					padding-right: $unite/2;
-					margin-left: $unite/2;
-					height: $baseline;					
-				}
+				padding-left: $unite/2;
 			}
 		}
 	}
