Header Mobile logic

--- a/prototypes/ui/assets/scss/pages/_piece.scss
+++ b/prototypes/ui/assets/scss/pages/_piece.scss
@@ -70,10 +70,15 @@ body#piece{
 
 	// details
 	#details{
-		padding: calc(clamp(#{$baseline*6}, 25vh, 300px)) 0  calc(clamp(#{$baseline*4}, 10vh, 100px)) 0; 
+		margin-top: $baseline*3;
+		padding: $baseline 0  $baseline 0; 
+		@include for-size(desktop){
+			margin-top: calc(clamp(#{$baseline*4}, 20vh, 250px));
+			padding: $baseline*2 0  calc(clamp(#{$baseline*4}, 10vh, 100px)) 0; 
+		}
 		p:first-of-type{}
 		h1{
-			@include f1-s3();
+			@include f1-s4();
 			@include for-size(desktop){ 
 				@include f1-s6();
 			}
