--- a/prototypes/ui/assets/scss/component/_side.scss
+++ b/prototypes/ui/assets/scss/component/_side.scss
@@ -177,19 +177,15 @@ body#piece, body#info{
     transition:  transform .25s ease-in-out;
 
     @include for-size(phone){
-      width: 90vw;
-      height: 100vh;
+      width: 100vw;
+      height: calc(100vh - #{$unite*4});
       top: 0;
-      left: calc(-90vw + #{$unite*2});
-      &:hover{
-        border-right: 1px solid currentColor;
-        background: white;
-      }    
+      left: 0;
+      transform: translateY(calc(-100vh + #{$unite*4}));    
     }
     @include for-size(desktop){
       width: $unite*10;
       height: 100vh;
-      //height: calc(100vh - #{$baseline*7});
       transform: translateX(#{$unite*-8});
       left: 0;
       top: 0;
@@ -205,19 +201,26 @@ body#piece, body#info{
     // Toggle Button
     label[for="toggle-sideNav"]{
       content: "Pièces";
-      @include f1-s0();
+      @include f1-s1();
+      font-weight: $bold;
       cursor: pointer;
       position: absolute;
-      top: $baseline*5;
-      right: 0;
-      padding: .5rem $unite/2 .5rem 0;
       opacity: 1;
-      border-bottom: 1px solid currentColor;
-      transform: rotate(90deg);
       transition: opacity .25s ease-in-out;
       z-index: 2;
+      top: $baseline*3.5;
+      right: 0;
+      padding: .5rem $unite/2 .5rem 0;
+      border-bottom: 1px solid currentColor;
+      transform: rotate(90deg);
+      @include for-size(phone){
+        /*bottom: $baseline*-4.5;
+        right: $unite;
+        text-align: right;*/
+        display: none;
+      }
+      @include for-size(desktop){}
 
-      @include for-size(desktop){top: $baseline*3.5;}
     }
 
     // inside behavior
@@ -229,7 +232,9 @@ body#piece, body#info{
       &::-webkit-scrollbar {display: none;}
       scroll-snap-type: y mandatory;
       height: 100%;
-      padding: $baseline*3 $unite $baseline*2 $unite;
+      padding: $baseline*2 $unite $baseline*2 $unite;
+      box-sizing: border-box;
+      @include for-size(desktop){ padding: $baseline*2 $unite $baseline*2 $unite; }
 
       li.cat{
         margin: 0 0 $baseline*2 0;
@@ -269,6 +274,11 @@ body#piece, body#info{
   nav#sideNav:focus, 
   input#toggle-sideNav:checked + nav#sideNav{
     transform: translateX(0);
+    @include for-size(phone){
+      border-bottom: 1px solid currentColor;
+      background: var(--bg);
+      & + #topbar { opacity: 0; }
+    }
     @include for-size(desktop){
       & + #topbar h1{ opacity: 0; }
     }
