--- a/prototypes/ui/assets/scss/component/_side.scss
+++ b/prototypes/ui/assets/scss/component/_side.scss
@@ -22,40 +22,26 @@ nav#sideNav{
 
 
   // Sort Options
-  .sort-options{
-    height: $baseline*2;
+  ul.sort-options{
     z-index: 5;
 
-    *{transition: .25s ease-in-out;}
-
-    p{
-      position: absolute;
-      right: 100%;
-      
-    }
-
-    ul{
-      overflow: hidden;
-      max-height: $font-size;
-      @include flex();
-      @include flex-direction(column);
-
-      li{
-        padding: 0 $unite/4 $baseline/2 $unite/4;
-        order: 2;
-        &:first-of-type{opacity: 0;}
-        label{cursor: pointer;}
+    li{
+      display: inline-block;
+      padding: 0 $unite/4 $baseline/2 $unite/4;
+      order: 2;
+      transition: .25s ease-in-out;
+      &:first-of-type{
+        opacity: 0;
+        border: $border;
+        padding: 3px;
+        font-size: .75rem;
       }
+      label{cursor: pointer;}
     }
-
     &:hover{
-      ul{
-        max-height: $baseline*10;
-        li:first-of-type{opacity: 1;}
-      }
+      li:first-of-type{opacity: .5;}
     }
   }
-
 }
 
   
@@ -89,8 +75,6 @@ body#categorie{
       right: $unite;
       top: 0;
     }
-
-    input[id$="sort-0"]:checked ~ .sort-options:not(:hover) p{right: 0;}
 
     > ul.cat-container{
       width: auto;
@@ -181,7 +165,15 @@ body#piece, body#info{
       height: calc(100vh - #{$unite*4});
       top: 0;
       left: 0;
-      transform: translateY(calc(-100vh + #{$unite*4}));    
+      transform: translateY(calc(-100vh + #{$unite*4}));
+      ul.sort-options{
+        position: absolute;
+        right: $unite/2;
+        top: 50%;
+        bottom: inherit;
+        transform: rotate(-90deg) translateX(50%);
+        transform-origin: bottom right;
+      }
     }
     @include for-size(desktop){
       width: $unite*10;
@@ -189,13 +181,6 @@ body#piece, body#info{
       transform: translateX(#{$unite*-8});
       left: 0;
       top: 0;
-    }
-
-    // Sort Options
-    .sort-options{
-      position: absolute;
-      right: 0;
-      bottom: 0;
     }
 
     // Toggle Button
